<resources>
    <string name="app_name">Chat App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign in</string>
    <string name="hint_email">Your email adresse</string>
    <string name="hint_password">Your password</string>
    <string name="welcome_to_you">Welcome</string>
    <string name="search_hint">Search some thing</string>
    <string name="action_search">Search</string>
    <string name="sample_name">Abdou Aziz Ndao</string>
    <string name="sample_message">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, eveniet ipsum modi quidem recusandae rerum.
    </string>
    <string name="share">Share</string>
    <string name="action_sign_out">Sign out</string>
</resources>
